# libsbf-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: read_sbf.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reader_fuzz.rs
proptest-regressions/: parser.txt
sbf-parser-fuzz/: Cargo.toml
sbf-parser-fuzz/in/: valid_quality_ind.sbf
sbf-parser-fuzz/src/: main.rs  reader-fuzz.rs
src/: do_not_use.rs  lib.rs  mega_test.rs  parser.rs  reader.rs  std.rs
src/messages/: att_cov_euler.rs  att_euler.rs  aux_ant_positions.rs  bds_ion.rs  commands.rs  diff_corr_in.rs  ext_sensor_info.rs  ext_sensor_meas.rs  ext_sensor_status.rs  gal_gst_gps.rs  gal_ion.rs  gal_nav.rs  gal_utc.rs  geo_nav.rs  geo_raw_l1.rs  gps_cnav.rs  gps_ion.rs  gps_nav.rs  gps_utc.rs  imu_setup.rs  ins_nav_cart.rs  ins_nav_geod.rs  ins_support.rs  meas3_doppler.rs  meas3_ranges.rs  meas_epoch.rs  meas_extra.rs  mod.rs  nav_cart.rs  pos_cov_cartesian.rs  pos_cov_geodetic.rs  pvt_cartesian.rs  pvt_geodetic.rs  quality_ind.rs  receiver_setup.rs  receiver_status.rs  rf_status.rs  vel_cov_cartesian.rs  vel_sensor_setup.rs
test-files/: mega_test.sbf
