[package]
name = "libsbf"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A no_std rust crate to parse Septentrio SBF Messages."
homepage = "https://github.com/saronic-technologies/libsbf-rs"
repository = "https://github.com/saronic-technologies/libsbf-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"

[dev-dependencies]
anyhow = "1.0.75"
