workspace = { members = ["sbf-parser-fuzz"] }
[package]
name = "libsbf"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
description = "A no_std rust crate to parse Septentrio SBF Messages."
homepage = "https://github.com/saronic-technologies/libsbf-rs"
repository = "https://github.com/saronic-technologies/libsbf-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
crc16 = "0.4.0"
heapless = "0.8.0"

[dev-dependencies]
anyhow = "1.0.75"
arbitrary = { version = "1.4.1", features = ["derive"] }
crc16 = "0.4.0"
libsbf = { path = ".", features = [ "std" ] }
proptest = "1.6.0"

[features]
std = []
