[package]
name = "sbf-parser-fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libsbf = { path = "..", features = [ "std" ] }

[[bin]]
name = "reader_fuzz"
path = "fuzz_targets/reader_fuzz.rs"
test = false
doc = false
bench = false
