[package]
name = "sbf-parser-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.15.17"
libsbf = { path = "..", features = [ "std" ] }

[[bin]]
name = "reader-fuzz"
path = "src/reader-fuzz.rs"
